# subsume

./: Algo.hs  Datatypes.hs  Enumerations.hs  Examples.hs  Implementation.hs  ImplementationFromPaper.hs  Main.hs  Maranget.hs  Minimize.hs  Model.hs  Parser.hs  README  README.md  Signature.hs  Subsumption.hs  Terms.hs  default.nix  example  minimize.cabal  otrs2trs.cabal  proof.v  shell.nix  stack.yaml
examples/: balance  cars  extended_syntax  interp  numadd
