name:                minimize
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable minimize
  main-is:             Main.hs
  build-depends:       base, containers, MemoTrie >= 0.6.4, QuickCheck, lazysmallcheck, testing-feat, uniplate
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  other-modules: Datatypes, Enumerations, Examples, Implementation, Model, Minimize
