name:                otrs2trs
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable otrs2trs
  main-is:             Main.hs
  build-depends:       base, containers, mtl, parsec, MemoTrie, memoize
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  other-modules: Datatypes, Terms, Algo, Signature, Maranget, Parser
