name:                otrs2trs
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable otrs2trs
  main-is:             Main.hs
  build-depends:       base, containers, mtl, parsec, ghcjs-dom
  default-language:    Haskell2010
  other-modules: Algo, Datatypes, Examples, Maranget, Parser, Signature, Terms
  ghc-options:         -O2
